--- a/4-point.tex
+++ b/4-point.tex
@@ -2,12 +2,7 @@
 \usepackage{paper-en}
 \usepackage{hyperref}
 
-
-
-
 %\usepackage[notref,notcite,color]{showkeys}
-
-
 
 \def\thetitle{Quadratic metric comparisons}
 \def\theauthors{Nina Lebedeva, Anton Petrunin, and Vladimir Zolotov}
@@ -23,19 +18,11 @@ pdftitle={\thetitle},
 pdfauthor={\theauthors}
 }
 
-
-
-
-
-
-
-
 %\usepackage[a-2b,mathxmp]{pdfx}[2018/12/22]
 %\overfullrule=100mm
 %\usepackage[none]{hyphenat}
 \begin{document}
 %\pagestyle{empty}\renewcommand\includegraphics[2][{}]{}
-
 
 \title{\thetitle}
 \author{\theauthors}
@@ -60,31 +47,34 @@ Namely, they are described by the so-called inequalities of negative type $(3,1)
 This observation motivated us to investigate the entire class of such inequalities for $n=4$.
 We certainly want to tackle the case $n>4$, but only after the simpler case $n=4$.
 
-Our paper contains several simple observations, but altogether they form something interesting and nontrivial; it also lays the groundwork for further investigation.
+Our paper contains several simple observations, but altogether they form something interesting and nontrivial;
+it also lays the groundwork for further investigation.
 Sections \ref{Associated form} and \ref{par:rank-one} introduce necessary definitions.
-Here we define associated quadratic form for a point array and inequalities of negative type;
-this is a special type of quadratic inequalities with $a_{i,j}=-\lambda_i\cdot\lambda_j$ for a real array $(\lambda_1,\dots, \lambda_n)$ such that $\lambda_1+\dots+\lambda_n=0$.
-We also prove several basic statements that valid for all $n$-point arrays.
+Here we define
+the
+associated quadratic form for a point array and inequalities of negative type, a special class of quadratic inequalities with $a_{i,j}=-\lambda_i\cdot\lambda_j$ for a real array $(\lambda_1,\dots, \lambda_n)$ such that $\lambda_1+\dots+\lambda_n=0$.
+We also prove several basic statements that are valid for all $n$-point arrays.
 
-Next, we turn our attentions to the $4$-point arrays.
+Next, we turn our attention to the $4$-point arrays.
 In Section~\ref{Four-point arrays}, we prove Proposition~\ref{prop:Four-point arrays}, which is a new version of a theorem of Abraham Wald \cite[§ 7]{wald} that describes the metrics of all possible 4-point arrays in Alexandrov spaces with nonnegative and nonpositive curvature.
 
-In Section~\ref{Alexandrov's comparison}, we show any nondegenerate inequality of negative type define Alexandrov spaces with nonnegative and nonpositive curvature,
+In Section~\ref{Alexandrov's comparison}, we show any nondegenerate inequality of negative type defines Alexandrov spaces with nonnegative and nonpositive curvature,
 which one depends on the sign of $\lambda_1\cdot\lambda_2\cdot\lambda_3\cdot\lambda_4$.
 This statement shows that we might impose a relatively weak form 4-point comparison on a space with length metric that forces much stronger 4-point comparison.
 The proof is a straightforward combination of the arguments by Takashi Sato \cite{sato} and its variation by the first two authors \cite{lebedeva-petrunin-2010};
-these papers consider particular cases such inequalities, namely for the $\lambda$-arrays $(1,1,-1,-1)$ and $(1,1,1,-3)$.
+these papers consider particular cases
+such inequalities, namely those for the $\lambda$-arrays $(1,1,-1,-1)$ and $(1,1,1,-3)$.
 
 Finally, in Section~\ref{par:globalization}, we show that the globalization theorem holds only for Alexandrov spaces with nonnegative curvature.
-Of cause this type of result was expected, but it now we know for sure that there no simple relatives of Toponogov theorem.
+Of course this type of result was expected, but we now know for sure that there are no simple relatives of the Toponogov theorem.
 
 \section{Associated form}\label{Associated form}
 
 Choose a point array $\bm{x}=(x_1,\dots,x_n)$ in a metric space.
-Let $V_n\z=\RR^{n-1}$ be Euclidean space with a choice of unit-edge regular simplex $\triangle$ in $V_n$; denote by $y_1,\dots,y_n$ its vertices.
+Let $V_n\z=\RR^{n-1}$ be Euclidean space with a choice of unit-edge regular simplex $\triangle$, whose vertices are $y_1,\dots,y_n$.
 Consider the quadratic form $\rho_{\bm{x}}$ on $V_n$ that is defined by the equalities
 \[\rho_{\bm{x}}(y_i-y_j)=|x_i-x_j|^2_X\]
-for all $i$ and $j$.
+for all indices $i$ and $j$.
 
 The quadratic form $\rho_{\bm{x}}$ will be called the \emph{associated form} of $\bm{x}=(x_1,\z\dots,x_n)$;
 it is uniquely defined and remembers all distances $|x_i-x_j|_X$
@@ -95,7 +85,7 @@ The Euclidean structure on $V_n$ identifies it with $V_n^*$.
 The space of quadratic forms over $V_n$ will be denoted by $W_n$;
 it is the symmetric square of $V_n=V_n^*$, and can be written as $W_n=S^2(V_n^*)=S^2(V_n)$.
 
-Any quadratic inequalities described above define linear inequalities on $W_n$, so they can be written as $\langle\omega,\rho_{\bm{x}}\rangle\ge 0$ for a fixed $\omega\in W_n$.
+Any quadratic inequality described above defines linear inequalities on $W_n$, so they can be written as $\langle\omega,\rho_{\bm{x}}\rangle\ge 0$ for a fixed $\omega\in W_n$.
 Therefore the set of solutions of any system of quadratic inequalities (finite or infinite) is a closed convex cone in $W_n$, say $K$;
 that is, $K$ is a nonempty closed set such that if $v,w\in K$, then $a\cdot v+b\cdot w\in K$ for any $a,b\ge0$.
 Denote by $\mathcal{M}_K$ the class of all length spaces $X$ such that
@@ -112,7 +102,7 @@ The last observation can be used in the opposite direction as well.
 It gives that all forms $\rho_{\bm{x}}$ for point arrays in $\mathcal{M}_K$-spaces form a convex cone, say $K'$.
 
 Evidently $K'\subset K$, and this inclusion might be strict.
-First reason comes from the triangle inequality, which is equivalent to $\rho_{\bm{x}}(w)\ge 0$ for any vector $w$ in a 2-face of $\triangle$.
+The first reason comes from the triangle inequality, which is equivalent to $\rho_{\bm{x}}(w)\ge 0$ for any vector $w$ in a 2-face of $\triangle$.
 These inequalities must hold for any form in $K'$.
 Furthermore, if $\rho_{\bm{x}}\in K'$, then $\rho_{\hat{\bm{x}}}\in K'$ for any $n$-point array $\hat{\bm{x}}$ made from the points of $\bm{x}$; in particular $\hat{\bm{x}}$ might be a permutation of points in $\bm{x}$.
 
@@ -121,11 +111,9 @@ and one cannot get more for general metric spaces.
 The next observation already uses length-metricness.
 
 \begin{thm}{Observation}
-If $K$ is a closed convex cone in $W_n$.
-Then $K'$ is closed.
+If $K$ is a closed convex cone in $W_n$, then $K'$ is closed.
 Moreover, $\mathcal{M}_K$ is closed under ultralimits.
 \end{thm}
-
 
 (For \emph{ultralimits} and \emph{ultracompletions} of metric spaces and all related topics, see, for example, \cite{petrunin2023}.)
 
@@ -150,10 +138,11 @@ recall that $X$ can be (and will be) considered as a subset of $X^\omega$.
 Since $K$ is closed, the observation implies that $X^\omega\in \mathcal{M}_K$.
 
 Since  $X$ is a length space, $X^\omega$ has to be geodesic.
-Since $X^\omega$ contains a pair of distinct point, it must have a nontrivial geodesic.
+Since $X^\omega$
+contains a pair of distinct points, it must contain a nontrivial geodesic.
 It follows that $\mathcal{M}_K$ contains a line segment.
-Rescaling the segment and passing to the ultralimit, we get $\RR\in \mathcal{M}_K$;
-passing to the products of real lines, we get the result.
+By rescaling the segment and passing to the ultralimit, we get $\RR\in \mathcal{M}_K$;
+taking products of real lines then yields the result.
 \qeds
 
 Let us denote by $Q$ the cone of nonnegative quadratic forms in $W_n$.
@@ -177,8 +166,7 @@ A given point array $\bm{x}=(x_1,\dots,x_n)$ is isometric to an array in a Eucli
 \end{thm}
 
 An inequality of type $\rho_{\bm{x}}(v)\ge 0$ for a fixed vector $v\in V_n$ will be called rank-one inequality.
-
-It is a special case of quadratic inequality.
+It belongs to the class of quadratic inequalities
 In the notation of Section~\ref{par:quadratic-inq}, it means that $a_{i,j}=-\lambda_i\cdot\lambda_j$ for a real array $(\lambda_1,\dots, \lambda_n)$ such that
 $\lambda_1+\dots+\lambda_n=0$.
 Such inequalities are also known as inequalities of \emph{negative type} \cite{deza-lauren}.
@@ -194,7 +182,7 @@ the type $(2,1)$ follows from the triangle inequality.
 In fact, all the triangle inequalities (we have 12 of them for 4 points) are equivalent to all inequalities of negative type $(2,1)$ (which is an infinite set).
 
 Consider a rank-one inequality $\rho_{\bm{x}}(v)\ge 0$; we may assume that $v$ is a unit vector.
-Since sign of $v$ does not change the inequality, we may assume that it lies in a closed hemisphere bounded by an equator in the direction of one of the facets of $\triangle$.
+Since the sign of $v$ does not change the inequality, we may assume that it lies in a closed hemisphere bounded by an equator in the direction of one of the facets of $\triangle$.
 These equators divide the hemisphere into 8 triangles and 6 quadrangles.
 The inequality $\rho_{\bm{x}}(v)\ge 0$ has negative type $(2,2)$ or $(3,1)$
 if and only if $v$ lies in the interior of a triangle or a quadrangle, respectively.
@@ -206,35 +194,34 @@ if and only if $v$ lies in the interior of a triangle or a quadrangle, respectiv
 \vskip-0mm
 \end{wrapfigure}
 
-
 If a vector $v$ is parallel to a facet of $\triangle$, then $\rho_{\bm{x}}(v)\ge 0$ is an inequality of negative type $(2,1)$, which follows from the triangle inequality.
 The picture shows the hemisphere.
-The labels on the edges show which triangle inequality becomes equality if $\rho_{\bm{x}}$ vanishes at some vector on this edge;
+The labels on the edges indicate which triangle inequality becomes an equality when $\rho_{\bm{x}}$ vanishes at a vector on that edge;
 for example, label $123$ means that
 \[|x_1-x_2|+|x_2-x_3|=|x_1-x_3|.\]
 If $\rho_{\bm{x}}$ vanishes on the intersection of equators, then two points in the array have to coincide;
 the label shows which pair.
-For example if it is marked by $12$, then $x_1=x_2$.
+For example, if it is marked by $12$, then $x_1=x_2$.
 
 \begin{thm}{Proposition}\label{prop:Four-point arrays}
 Let $X$ be a 4-point metric space.
 
 If $X$ satisfies all inequalities of negative type $(3, 1)$, then it admits an isometric embedding into the product $r\cdot \mathbb{S}^1\times\RR^3$ for some $r>0$.
 
-If $X$ satisfies all inequalities of negative type $(2, 2)$, then it admits an isometric embedding into the product $T\times\RR^3$, where $T$ denotes the \emph{tripod};
+If $X$ satisfies all inequalities of negative type $(2, 2)$, then it admits an isometric embedding into the product $Y\times\RR^3$, where $Y$ denotes the \emph{tripod};
 that is, three half-lines with a common base point.
 \end{thm}
 
 Inequalities of negative type $(3, 1)$ hold in Alexandrov spaces with nonnegative curvature; it follows from the so-called Lang--Schroeder--Sturm inequality \cite{lang-schroeder, sturm}.
-Similarly, inequalities of negative type $(2, 2)$ hold in Alexandrov spaces with nonpositive curvature; it easily follows from the (2+2)-point comparison \cite[9.5]{AKP-2024}.
-Since the tripod $T$ has nonpositive curvature, and $\mathbb{S}^1$ has nonnegative curvature in the sense of Alexandrov, we get the following corollary, which also follows from the result of Abraham Wald \cite[§ 7]{wald}.
+Similarly, inequalities of negative type $(2, 2)$ hold in Alexandrov spaces with nonpositive curvature.
+This follows easily from the (2+2)-point comparison \cite[9.5]{AKP-2024}.
+Since the tripod $Y$ has nonpositive curvature, and $\mathbb{S}^1$ has nonnegative curvature in the sense of Alexandrov, we get the following corollary, which also follows from the result of Abraham Wald \cite[§ 7]{wald}.
 
 \begin{thm}{Corollary}\label{cor:Four-point arrays}
-A 4-point metric space $X$ is isometric to subset of a length space with nonpositive (nonnegative) curvature in the sense of Alexandrov if and only if all inequalities of negative type $(3, 1)$ (respectively, type $(2, 2)$) hold in $X$.
+A 4-point metric space $X$ is isometric to a subset of a length space with nonpositive (nonnegative) curvature in the sense of Alexandrov if and only if all inequalities of negative type $(3, 1)$ (respectively, type $(2, 2)$) hold in $X$.
 \end{thm}
 
 More general five-point versions of this corollary have already been proved by Tetsu Toyoda \cite{toyoda,lebedeva-petrunin2021} and the first two authors \cite{lebedeva-petrunin-2024}, respectively.
-
 
 \parit{Proof of \ref{prop:Four-point arrays}.}
 Let us enumerate points in $X$ and let $\rho$ be the associated form on $V_4$.
@@ -248,7 +235,7 @@ denote the corresponding metric space by $\tilde X$.
 If $X$ satisfies all inequalities of negative type $(3, 1)$ or $(2,2)$, then the same holds for $\tilde X$.
 
 By \ref{obs:rank-one}, $X$ isometrically embeds into $\tilde X\times \RR^3$.
-Hence it is sufficient to show that $\tilde X$ embeds into $T$, or, respectively, into $r\cdot \mathbb{S}^1$ for some $r>0$.
+Hence it is sufficient to show that $\tilde X$ embeds into $Y$, or, respectively, into $r\cdot \mathbb{S}^1$ for some $r>0$.
 
 Let $N\subset \mathbb{S}^2$ be a set where $\tilde\rho$ is negative and let $\bar N$ be its closure.
 The set $N$ is nonempty; otherwise we are in the case $\rho\ge 0$, which is already covered.
@@ -263,7 +250,7 @@ Therefore, $\tilde\rho$ is not minimal --- a contradiction.
 
 It means that $\bar N$ lies in a quadrangle or triangle, respectively, and touches its sides at three points or more.
 
-In the case of triangle, $\bar N$ has to touch all of its sides.
+In the case of a triangle, $\bar N$ has to touch all of its sides.
 The diagram shows that we may, after relabeling, assume that
 \begin{align*}
 |x_1-x_2|&=|x_1-x_4|+|x_4-x_2|,
@@ -272,9 +259,9 @@ The diagram shows that we may, after relabeling, assume that
 \\
 |x_3-x_1|&=|x_3-x_4|+|x_4-x_1|.
 \end{align*}
-In this case, the array can be embedded into $T$.
+In this case, the array can be embedded into $Y$.
 
-In the case of quadrangle, $\bar N$ touches at least three of its sides, but might touch all four.
+In the case of a quadrangle, $\bar N$ touches at least three of its sides, but might touch all four.
 The diagram shows that we may, after relabeling, assume that
 \begin{align*}
 |x_1-x_4|&=|x_1-x_2|+|x_2-x_4|=|x_1-x_3|+|x_3-x_4|,
@@ -285,22 +272,21 @@ The diagram shows that we may, after relabeling, assume that
 In any case, the array can be embedded into $r\cdot \mathbb{S}^1$, where $r=|x_1-x_4|/\pi$.
 \qeds
 
-The following picture shows possible positions of the set $N$.
+The following picture shows the possible positions of the set $N$.
 \begin{figure}[h!]
 \centering
 \vskip-0mm
 \includegraphics{mppics/pic-30}
 \vskip-0mm
 \end{figure}
-Below it, we draw a diagram following the convention from \cite{lebedeva-petrunin-2010};
+Below it, we provide a diagram following the convention from \cite{lebedeva-petrunin-2010};
 if three points, say $x_1$, $x_2$, and $x_3$, appear in that order on a smooth line, then $|x_1-x_2|+|x_2-x_3|=|x_1-x_3|$.
-
 
 \section{Alexandrov's comparison}\label{Alexandrov's comparison}
 
 Consider a rank-one inequality $\rho_{\bm{x}}(v)\ge 0$.
 This inequality is of negative type $(2,2)$ if $v$ points from one edge of $\triangle$ to the opposite edge.
-Further, it is of type $(3,1)$ if $v$ points from a vertex to the opposite facet (up to sign of $v$).
+Further, it is of type $(3,1)$ if $v$ points from a vertex to the opposite facet (up to the sign of $v$).
 
 \begin{thm}{Proposition}\label{prop:Alexandrov's comparison}
 Suppose $K\subset W_4$ is defined by a single rank-one inequality on $4$-point arrays.
@@ -312,7 +298,7 @@ Suppose $K\subset W_4$ is defined by a single rank-one inequality on $4$-point a
 
 \end{thm}
 
-Combing this statemet with Corollary~\ref{cor:Four-point arrays} gives that imposing single inequality of negative type $(2,2)$ or $(3,1)$ on a length space implies \emph{all} inequalities of the same type which is much stronger and might be surprising at first.
+Combining this statement with Corollary~\ref{cor:Four-point arrays} gives that imposing a single inequality inequality of negative type $(2,2)$ or $(3,1)$ on a length space implies \emph{all} inequalities of the same type which is much stronger and might be surprising at first.
 
 \parit{Proof.}
 Our inequality can be written as 
@@ -334,8 +320,8 @@ in case of $(3,1)$-inequality, we have $0<\alpha<1$.
 Consider the 4-point array $\bm{x}=(x_1,x_2,x_3,x_4)$  in the plane such that 
 \[x_4=\alpha\cdot (1-\beta)\cdot x_1+(1-\alpha)\cdot(1-\beta)\cdot x_2+\beta\cdot x_3.\]
 We can assume that the array is labeled so that it matches one of the configurations in the pictures below,
-so for $(3,1)$-inequality, point $x_4$ lies inside of triangle $x_1x_2x_3$,
-and for $(2,2)$-inequality segment $[x_1x_3]$ intersects $[x_2x_4]$.
+so for $(3,1)$-inequality, point $x_4$ lies inside of the triangle $x_1x_2x_3$,
+and for $(2,2)$-inequality the segment $[x_1x_3]$ intersects $[x_2x_4]$.
 
 Note that we get equality in \ref{eq:lambda} for this array.
 Moreover, this defines a bijection between plane $\bm{x}$-arrays up to affine transformation and $\lambda$-arrays up to multiplication by a nonzero coefficient;
@@ -367,14 +353,15 @@ in particular $|x_3-x_4|+|x_4-x_5|=|x_3-x_5|$.
 Consider the inequalities of type \ref{eq:lambda} that correspond to the arrays $x_1,x_2,x_3,x_4$ and $x_1,x_2,x_3,x_5$;
 let us call them first and second.
 
-Suppose that the first inequality holds for any four-point array in a length space $X$, then so does the second inequality.
+Suppose that the first inequality holds for any four-point array in a length space $X$.
+Then the second inequality also holds.
 \end{thm}
 
 Indeed, passing to the ultracompletion, we may assume that $X$ is geodesic.
 Choose 4 points $x_1,x_2,x_3,x_5\in X$ and let $x_4$ be a point on a geodesic $[x_3x_5]$ that divides it in the same ratio as in the 5-point configuration in the plane.
-If we sum up the first inequality for arrays $x_1,x_2,x_3,x_4$ and $x_1,x_2,x_4,x_5$ with an appropriate coefficients, then we get the second inequality for $x_1,x_2,x_3,x_5$.
+If we sum up the first inequality for arrays $x_1,x_2,x_3,x_4$ and $x_1,x_2,x_4,x_5$ with with the appropriate coefficients, then we get the second inequality for $x_1,x_2,x_3,x_5$.
 
-By the claim, the inequality for $\lambda$-array $(\alpha\cdot (1-\beta),(1-\alpha)\cdot(1-\beta), \beta,-1)$ implies the inequality for the $\lambda$-array $(\alpha\cdot (1-\beta^2), (1-\alpha)\cdot(1-\beta^2), \beta^2,-1)$.
+According to the claim, the inequality for $\lambda$-array $(\alpha\cdot (1-\beta),(1-\alpha)\cdot(1-\beta), \beta,-1)$ implies the inequality for the $\lambda$-array $(\alpha\cdot (1-\beta^2), (1-\alpha)\cdot(1-\beta^2), \beta^2,-1)$.
 Applying the claim several times, we get all the inequalities with $\lambda$-arrays
 \[(\alpha\cdot (1-\gamma),\  (1-\alpha)\cdot(1-\gamma),\ \gamma,\ -1)\]
 for $\gamma=\beta^{2^k}$ with any integer $k\ge 1$;
@@ -389,7 +376,7 @@ in particular, we get the following inequality
 \end{aligned}
 \eqlbl{eq:lambda-inq}
 \]
-arbitrarily small $\gamma>0$.
+for arbitrarily small $\gamma>0$.
 
 Choose $X\in \mathcal{M}_K$.
 Let us apply \ref{eq:lambda-inq}
@@ -415,8 +402,8 @@ Passing to the limit as $\gamma\to 0$ in the inequality \ref{eq:trig-inq}$\,+\,\
 \]
 %Passing to the limit as $\gamma\to 0$ in the inequality $2\cdot$\ref{eq:trig-inq}$\,+\,\tfrac1\gamma\cdot($\ref{eq:lambda-inq}$\,-\,$\ref{eq:trig-inq}$)$, we get \[ \begin{aligned} |x_3-x_4|^2&\ge (1-\alpha)\cdot|x_3-x_2|^2+\alpha\cdot x_3-x_1|^2- \\ &-(1-\alpha)\cdot |x_4-x_2|^2-\alpha\cdot|x_4-x_1|^2. \end{aligned} \eqlbl{eq:CBB-CBA'} \]
 Nonnegative or nonpositive curvature in the sense of Alexandrov can be defined via this inequality for all $\alpha\in (0,1)$ and $\alpha\in (1,\infty)$, respectively; see \cite[8.14 and 9.14]{AKP-2024}.
-So far, we obtain it for only one value of $\alpha$.
-However, by iterating the inequality, we derive it for the remaining values.
+So far, we have obtained it for only one value of $\alpha$;
+however, by iterating the inequality we can derive it for the remaining values.
 
 More precisely, assume this inequality holds for some $\alpha\in (0,1)$, then applying iteration we can change $\alpha$ to $(1-\alpha)$, $\alpha^2$,  $\alpha\cdot (1-\alpha)$, $(1-\alpha^2)$, and so on.
 Together with any value $\xi$, this set contains $1-\xi$ and $\xi^k$ for any integer $k\ge 1$.
@@ -436,7 +423,7 @@ If local $K$-comparison implies $K$-comparison for any length space, then we say
 
 We continue to consider 4-point arrays, so $V_4=\RR^3$ and $W_4=S^2(V_4^*)=\RR^6$.
 
-The following statement says that if globalization holds for quadratic comparison, then it is either trivial or defines nonnegatively curved Alexandrov spaces;
+The following statement shows that if globalization holds for quadratic comparison, then it is either trivial or characterizes nonnegatively curved Alexandrov spaces;
 so, in some sense Toponogov's theorem is the only nontrivial globalization theorem for quadratic conditions on 4-point arrays.
 
 \begin{thm}{Theorem}\label{thm:globalization}
@@ -469,22 +456,22 @@ Denote by $K_\delta\subset W_4$ the minimal closed convex cone that includes all
 Note that $K_0\z\subset K_\delta$;
 moreover, $K_0=\bigcap_{\delta>0} K_\delta$.
 
-Every Riemannian manifold has a local curvature bound at each point.
+Every Riemannian manifold admits a local curvature bound at each point.
 In particular, after appropriate rescaling, a small neighborhood of any point of Riemannian manifold has curvature at least $-1$.
 Therefore, any compact Riemannian manifold satisfies local $K_\delta$-comparison.
 
 Suppose $K\supset K_\delta$ for some $\delta>0$.
-Since the globalization holds for $K$, the class $\mathcal{M}_K$ contains all compact Riemannian manifolds.
+Since globalization holds for $K$, the class $\mathcal{M}_K$ contains all compact Riemannian manifolds.
 Every finite metric graph can be approximated by compact Riemannian manifolds;
-to prove it, embed the graph isometrically in the Euclidean space and pass to a boundary of an appropriate
-neighborhood.
+to prove it,
+embed the graph isometrically into Euclidean space and take the boundary of an appropriate neighborhood.
 (A way stronger result is proved by Vedrin Šahović in his thesis \cite{sahovic2009}.)
 Any metric on $\{x_1,x_2,x_3,x_4\}$ admits a distance-preserving embedding into a metric graph, so $K$ contains a form near the associated form for any semimetric on $\{x_1,x_2,x_3,x_4\}$.
 Since $K$ is closed, it contains forms associated to all metrics on 4-point set;
 so $K$ is defined only by the triangle inequalities, and the $K$-comparison is trivial.
 
 From now on, we can assume that for any $\delta>0$ there is a form $\theta\in K_\delta\setminus K$.
-By \ref{cor:squared-sides}, we can choose a $(3,1)$-inequality with the $\lambda$-array of this inequality has form $(\lambda_1,\lambda_2,\lambda_2,-1)$ such that
+By \ref{cor:squared-sides}, we can choose a $(3,1)$-inequality with the $\lambda$-array of this inequality has form $(\lambda_1,\lambda_2,\lambda_3,-1)$ such that
 \[\begin{aligned}
 \sum_{i,j}&\lambda_i\cdot\lambda_j\cdot|x_i-x_j|_X^2
 \le
@@ -501,14 +488,14 @@ We have three options:
 \begin{enumerate}[(i)]
 \item\label{in} $\lambda_1>0$, $\lambda_2>0$, and $\lambda_3>0$;
 \item\label{side} $\lambda_i=0$ for one $i$.
-\item\label{vertex} $\lambda_i=0$ for two indexes $i$.
+\item\label{vertex} $\lambda_i=0$ for two indices $i$.
 \end{enumerate}
 
 In the first case,  $(\lambda_1,\lambda_2,\lambda_2,-1)$ defines an inequality of negative type $(3,1)$.
 This inequality holds for any form in $K$.
 Therefore, \ref{prop:Alexandrov's comparison}\ref{prop:Alexandrov's comparison:(3,1)} finishes the proof.
 
-In case \ref{side} we can assume that $\lambda_3=0$, so
+In case \ref{side}, we can assume that $\lambda_3=0$, so
 \[\bm{\lambda}_\infty=(\alpha,(1-\alpha),0,-1);\]
 it defines an inequality of negative type $(2,1)$.
 Note that
@@ -523,10 +510,10 @@ Applying the same calculations as in the proof of \ref{prop:Alexandrov's compari
 if $x_4$ lies on $[x_2x_3]$ and divides it in the ratio $(1-\alpha):\alpha$.
 It remains to follow the end of proof of \ref{prop:Alexandrov's comparison}.
 
-In case \ref{vertex} we can assume that $\lambda_1=\lambda_2=0$, so $\bm{\lambda}_\infty=(0,0,1,-1)$ and
+In case \ref{vertex}, we can assume that $\lambda_1=\lambda_2=0$, so $\bm{\lambda}_\infty=(0,0,1,-1)$ and
 \[\bm{\lambda}_n=(\alpha_n\cdot(1-\beta_n),(1-\alpha_n)\cdot(1-\beta_n),\beta_n,-1),\]
 where $0<\alpha_n<1$ and $\beta_n\to 1^-$ as $n\to\infty$.
-Let us swing the corresponding inequalities defined by \ref{eq:+squares} reducing the problem to the first two cases.
+Let us rock-and-shake the corresponding inequalities defined by \ref{eq:+squares} to to sweep $\bm{\lambda}_\infty$ out of the corners.
 Namely, we have that the inequality with array
 \[(\alpha_n\cdot(1-\beta_n),(1-\alpha_n)\cdot(1-\beta_n),\beta_n,-1)\]
 holds with an error
@@ -541,7 +528,9 @@ Since $\beta_n\to 1^-$, we can choose $k=k(n)$ such that $k\to \infty$ and $n\to
 <
 \delta_n^2\cdot \alpha_n\cdot(1-\beta_n^{2^k})^2\cdot(1-\alpha_n)\cdot\beta_n^{2^k}
 \]
-That is, having a sequence of inequalities with $\lambda$-arrays converging to $(0,0,1,-1)$ we construct a sequence of inequalities of the same type that with the limit $\lambda$-array covered in cases \ref{in} or \ref{side}.
+
+That is, from a sequence of inequalities with $\lambda$-arrays converging to $(0,0,1,-1)$,
+we cook another sequence with the limit $\lambda$-array covered in cases \ref{in} or \ref{side}.
 \qeds
 
 \section{Auxiliary statements}
@@ -554,7 +543,7 @@ Then
 \[\sum_{i,j}\lambda_i\cdot\lambda_j\cdot|x_i-x_j|_X^2
 \le
 12\cdot\lambda_1\cdot\lambda_2\cdot\lambda_3\cdot\tilde a^2,\]
-where $\tilde a$ denotes the area of model triangle $\tilde\triangle(x_1x_2x_3)_\EE^2$.
+where $\tilde a$ denotes the area of model triangle $\tilde\triangle(x_1x_2x_3)_{\EE^2}$.
 \end{thm}
 
 By Heron's formula,
@@ -592,9 +581,9 @@ yields a Euclidean quadruple.
 That is, decreasing $|x_2-x_3|^2$ by
 \[2\cdot |x_1-x_2|\cdot|x_1-x_3|(\cos\phi-\cos\psi)
 \le
-2\cdot|x_1-x_2|\cdot|x_1-x_3|\cdot a\cdot\sin\phi
+2\cdot|x_1-x_2|\cdot|x_1-x_3|\cdot \tilde a\cdot\sin\phi
 =
-4\cdot a^2\]
+4\cdot \tilde a^2\]
 makes the quadruple Euclidean.
 It follows that
 \[\sum_{i,j}\lambda_i\cdot\lambda_j\cdot|x_i-x_j|_X^2\le 4\cdot \lambda_2\cdot\lambda_3\cdot\tilde a^2,\]
@@ -619,15 +608,15 @@ Our inequality can be written as $\langle \omega,\rho_{\bm{x}} \rangle\ge 0$, wh
 
 \begin{wrapfigure}{o}{30mm}
 \centering
-\vskip-0mm
+\vskip-4mm
 \includegraphics{mppics/pic-40}
 \vskip-0mm
 \end{wrapfigure}
 
 Let $N\subset \SSS^2\subset V_4$ be the set of unit vectors $v$ such that $\theta(v)<0$.
 The set $N$ does not intersect the four equators $e_1$, $e_2$, $e_3$, $e_4$ parallel to the facets of $\triangle$.
-Moreover, since $K\supset K_0$, the set $N$ lies in one of triangles, say $\Upsilon$;
-we can assume that equators $e_1$, $e_2$, $e_3$ are extensions of sides of $\Upsilon$, and $e_4$ is the remaining equator.
+Moreover, since $K\supset K_0$, the set $N$ lies in one of triangles, say $T$;
+we can assume that equators $e_1$, $e_2$, $e_3$ are extensions of sides of $T$, and $e_4$ is the remaining equator.
 
 Since $K\supset K_0$, we have $\omega(v)\ge 0$ for any $v\in V_4$.
 Let $\sigma$ be a unit 1-form on $V_4$ that vanishes on $e_4$.
@@ -662,7 +651,7 @@ By \ref{lem:area-bound}, we have
 \le
 12\cdot\lambda_1\cdot\lambda_2\cdot\lambda_3\cdot\tilde a^2.\]
 Note that $\theta(v)=\eps_v\cdot d_v^2$ and $\theta(w)=\eps_w\cdot d_w^2$, where
-$d_v$ and $d_w$ are distances from a vertex of the model triangle $\tilde\triangle(x_1x_2x_3)$ to a point that divide the opposite side in the certain ratio and $\eps_v,\eps_w\ge 0$,
+$d_v$ and $d_w$ are distances from a vertex of the model triangle $\tilde\triangle(x_1x_2x_3)$ to a point that divide the opposite side in a certain ratio and $\eps_v,\eps_w\ge 0$,
 Since diameter of $\tilde\triangle(x_1x_2x_3)$ is at most $\delta$,
 \begin{align*}
 \tilde a&\le \delta\cdot d_v/2,
@@ -683,7 +672,12 @@ To verify this statement, note that the inequality forbids tripods.
 It would be super-nice to find a quadratic inequality for $n$-point arrays with globalization that is not implied by the standard globalization theorem.
 Some candidates can be found in our earlier paper \cite{lebedeva-petrunin-zolotov}.
 Also, it might be possible to prove a version of our globalization theorem
-for simply connected spaces, which includes the Cartan--Hadamard theorem
+for simply connected spaces, which includes the Cartan--Hadamard theorem.
+
+For general (closed) conditions on semimetrics on $n$-point arrays, globalization holds of course for curvature bounded below by $\kappa\in \RR$ in the sense of Alexandsrov,
+but it holds for other condition as well;
+the set of semimetrics on $4$-point arrays that are embeddable in $r\cdot\SSS^1$ for any $r>0$ gives an example.
+Understanding globalization phenomena in such general settings seems to be out of reach at the moment.
 
 {\sloppy
 \def\emph{\textit}
