--- a/4-point.tex
+++ b/4-point.tex
@@ -644,22 +644,23 @@ Since
 (In particular, $N\ne\emptyset$.)
 Therefore, $\rho_{\bm{x}}(u)\ge0$ is an inequality of negative type $(3,1)$.
 
+Suppose $(x_1,x_2,x_3,x_4)$ comes with semimetric that with the associated form $\theta$.
 Let us rescale $u$, $v$, and $w$ so that the inequality $\theta(u)\ge 0$ (which as we know has negative type $(3,1)$)
 has $\lambda$-array $(\lambda_1,\lambda_2,\lambda_3,-1)$.
 By \ref{lem:area-bound}, we have
 \[\theta(v)+\theta(w)
 \le
 12\cdot\lambda_1\cdot\lambda_2\cdot\lambda_3\cdot\tilde a^2.\]
-Note that $\theta(v)=\eps_v\cdot d_v^2$ and $\theta(w)=\eps_w\cdot d_w^2$, where
-$d_v$ and $d_w$ are distances from a vertex of the model triangle $\tilde\triangle(x_1x_2x_3)$ to a point that divide the opposite side in a certain ratio and $\eps_v,\eps_w\ge 0$,
+Note that $\theta(v)=\eps_v\cdot \tilde d_v^2$ and $\theta(w)=\eps_w\cdot \tilde d_w^2$, where
+$\tilde d_v$ and $\tilde d_w$ are distances from a vertex of the model triangle $\tilde\triangle(x_1x_2x_3)_{\EE^2}$ to a point that divide the opposite side in a certain ratio and $\eps_v,\eps_w\ge 0$,
 Since diameter of $\tilde\triangle(x_1x_2x_3)$ is at most $\delta$,
 \begin{align*}
-\tilde a&\le \delta\cdot d_v/2,
+\tilde a&\le \delta\cdot \tilde d_v/2,
 \\
-\tilde a&\le \delta\cdot d_w/2.
+\tilde a&\le \delta\cdot \tilde d_w/2.
 \end{align*}
 Hence $\eps_v+\eps_w\le 3\cdot \delta^2\cdot\lambda_1\cdot\lambda_2\cdot\lambda_3$.
-Furthermore, each value $d_v$ and $d_w$ does not exceed the maximal side of $[x_1x_2x_3]$ --- hence the result.
+Furthermore, each value $\tilde d_v$ and $\tilde d_w$ does not exceed the maximal side of $[x_1x_2x_3]$ --- hence the result.
 \qeds
 
 \section{Remarks}
